classDiagram

class PlayerProps

class PlayerContext {
    <<object>>
    paused: Context<boolean>
    currentTime: Context<number>
    volume: Context<number>
    ...
}

class ContextProvider {
    <<library>>
}

PlayerContext --> ContextProvider: uses
PlayerContext --> PlayerProps: implements

class Player

Player --> PlayerContext: provides

class UIComponent

UIComponent --> PlayerContext: consumes